--- a/src/superapp/index.html
+++ b/src/superapp/index.html
@@ -3,7 +3,7 @@
     <title>Angular 2 mit Gulp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <base href="/superapp/">
+    <base href="/superapp">
 
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
